# hyeyoungshin.github.io

./: .gitignore  CNAME  _config.yaml  about.html  about.rst  archive.html  contact.html  contact.markdown  hy-hakyll.cabal  index.html  notes.css  notes.html  projects.html  site.hs  stack.yaml
_layouts/: default.html  post.html
_posts/: 2025-01-15-functional-programming.md  2025-01-15-jekyll.md  2026-01-14-jekyll.md  2026-01-15-jekyll.md  2026-01-15-syntax-highlight.md  2026-01-17-function-overloading.md  2026-01-18-to-match-or-not-to-match.md  2026-01-20-functional-updates.md  2026-01-28-client-server-design.md  2026-01-29-what-does-rusts-type-checker-know.md  2026-01-31-format-specifiers.md  2026-02-01-never-type.md  2026-02-04-expression-statement.md  2026-02-10-immutable-data-structure-and-mutable-binding.md  2026-02-16-rand-API-change.md  2026-02-22-oh-my-god-it-works.md  2026-02-23-message-passing.md  2026-02-25-ironing-out-message-passing-concurrency.md  2026-03-16-git-note.md  2026-03-17-petal.md
_site/: about.txt  notes.html
css/: default.css
docs/: CNAME  about.html  archive.html  contact.html  index.html  projects.html
docs/css/: default.css  style.css
docs/posts/: 2015-08-12-spqr.html  2015-08-23-example.html  (+3 more)
notes/: 2025-01-15.html  index.html
posts/: 2015-08-12-spqr.html  2015-08-23-example.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html
projects/: graph-analytics.md  r-testing-tool.md  secure-compilation.md
tech-diary/: index.html
templates/: archive.html  default.html  post-list.html
(+1 files in other folders)
